styles/base.less
/* ... */
#settings-popup .themes > span {
	clear: both;
	display: block;
	color: white;
	font-size: 11px;
    text-align: center;
}

#yt-power {
	display: block;
	background: url('/images/powered_by_yt.gif') center center no-repeat;
	float: right;
	width: 63px;
	height: 50px;
	margin-right: 5px;
}

#results-container {
	overflow-y: scroll;
	min-height: 200px;
}
#results-container.target {
}

/* RESULTS
*******************************/

.results {
	display: none;
}
.results > .video {
    background-image: url('/images/song.png');
    background-repeat: no-repeat;
    background-position: top left;
    padding: 3px 4px 3px 20px;
    cursor: default;
}
.results > .video .rating {
    float: right;
    width: 60px;
    height: 8px;
    margin: 1px 0;
    padding: 1px;
}
.results > .video .rating div {
    height: 100%;
}
.results > .video.selected .rating {
}
.results > .video.selected .rating div {
}
.results > .video:nth-child(odd) {
}
.results > .playing,
.results > .playing:nth-child(odd) {
	background-repeat: no-repeat;
	background-image: url('/images/playing.png');
} 
.results > .selected, 
.results > .selected:nth-child(odd) {
}
.results > .disabled {
    background-image: url('/images/disabled.png');
} 

.results > .playlist {
    background-image: url('/images/list.png');
    background-repeat: no-repeat;
    background-position: top left;
}

.results > .loadMore {
    text-align: center;
    background-image: none;
    cursor: pointer;
}

.results > .loading {
}

.results > .video > ul {
	margin-left: 25px; 
}
.results > .video > ul > li { 
	background-image: url('/images/song.png'); 
	background-repeat: no-repeat; 
	background-position: top left; 
	padding: 3px 4px 3px 20px; 
	cursor: default; 
}
.results > .video > ul > .playing,
.results > .video > ul > .playing:nth-child(odd) { 
	background-repeat: no-repeat;
	background-image: url('/images/playing.png');
} 
.results > .video > ul > .selected, 
.results > .video > ul > .selected:nth-child(odd) { 
}
.results > .video > ul > .disabled { 
	background-image: url('/images/disabled.png'); 
}

.alternatives { 
	margin-top: 2px; 
}
.alternatives li {
	display: none;
}
.alternatives > .playing {
	display: block;
}
.alternatives .prev, .alternatives .next {
	display: inline-block;
	border: solid 1px #444;
	.button(url('/images/null.png'));
	color: #444;
	font-size: 10px;
	float: right;
}
.alternatives .prev {
	border-radius: 5px 0 0 5px;
}

.alternatives .next {
	border-radius: 0 5px 5px 0;
}

.alternatives li:first-child .prev {
	display: none;
}

.alternatives li:last-child .next {
	display: none;
}

/* PLAYLISTBAR
*******************************/
#playlistbar {
    height: 30px;
    padding: 10px 10px 3px 10px;
	overflow: hidden;
}
#playlistbar .title {
	margin-top: 1px;
    display: inline-block;
    font-size: 18px;
    .bold();
}
#playlistbar .owner {
    display: inline-block;
    margin: 0 10px;
}
#playlistbar input {
    float: right;
    display: inline-block;
}
#playlistbar .share {
    float: none;
    margin: 10px;
}

/* SHARE VIDEO POPUP
*******************************/

.popup.share input {
    display: block;
    width: 100%;
}
.popup.share img {
    cursor: pointer;
    margin: 5px 2px 0 0;
}

/* NOTIFICATION
*******************************/

#notification {
    position: absolute;
    width: 100%;
    z-index: 100;
	background-color: #fdfea2;
	padding: 14px 0 14px 20px;
	cursor: pointer;
	display: none;
	max-height: 45px;
}
#notification:hover {
	background-color: #fafbb9;	
}
#notification span {
	font-size: 16px;
	color: #000;
}

/* FATBAR
*******************************/

#fatbar {
	height: 280px;
	cursor: default;
}
#fatbar .box {
    float: left;
    width: 230px;
    height: 100%;
}
#fatbar .box .content {
    padding: 5px;
}
#fatbar .box h2 {
    text-align: center;
    padding: 10px;
    height: 30px;
    font-weight: bold;
    font-size: 14px;
}
#fatbar .results .title {
    display: block;
    width: 190px;
    height: 15px;
	overflow: hidden;
	text-overflow: ellipsis;
}

/* TIME LINE
*******************************/

#timeline-container {
    height: 45px;
    text-align: center;
	position: absolute;
	bottom: 0;
	left: 0;
}
#position-label {
	width: 50px;
    margin-top: 17px;
    text-align: center;
	display: block;
	float: left;
}
#timeline  {
    height: 7px;
    border: 1px solid #333;
    margin-top: 20px;
    .border(5px);
    background: rgba(0,0,0,0.2);
	float: left;
}
#inner-timeline {
    display: none;
    position: relative;
    background: rgba(255,255,255,0.2);
    height: 100%;
    .border(5px);
}
#inner-timeline-knob {
    position: absolute;
    right: 0;
    height: 7px;
    width: 7px;
    .border(7px);
    .lightGradient;
}
#end-label { 
	width: 50px;
	margin-top: 17px;
	text-align: center;
	display: block;
	float: left;
}

#youtube-container {
	background-color: #000;
}

@media all and (max-height: 500px) {
    #youtube-container {
        position: absolute;
        display: hidden;
    }
    #video {
        height: 50px;
    }
}

/* MISC
******************************************************************************/

/* DRAG N DROP
*******************************/

#dragElem {
    position: absolute;
    float: left;
    z-index: 10;
    padding: 5px;
}
.target {
}
#new-playlist.target {
}
.reorderable {
}
.results > .insert-before,
#playlists > .insert-before {
}
.results > .insert-after,
#playlists > .insert-after {
}

/* CONTEXT MENU
*******************************/

#contextmenu {
    position: absolute;
    float: left;
    z-index: 200;
    padding: 5px;
}
#contextmenu .option {
    padding: 5px;
    cursor: pointer;
}
#contextmenu .option:hover {
}

#blocker {
    position: absolute;
    top: 0;
    left: 0;
    z-index: 199;
    width: 100%;
    height: 100%;
    background: transparent;
}

/* TRANSLATOR PANEL
*******************************/

#translator-panel {
    width: 100%;
    background: white;
    color: black;
    border: 1px solid #ccc;
}
/* ... */

